# VoxVulgi

./: .gitignore  4kvideodownloaderplus_APP_AUDIT.md  4kvideodownloaderplus_REVERSE_BUILT_TECHNICAL_SPEC.md  AGENTS.md  CLAUDE.md  MODEL_BEHAVIOR.md  PROJECT_CODEX.md  build_rules.md  justfile  vvstart.cmd
governance/: README.md
governance/release/: BUILD_CHANGELOG.md
governance/scripts/: README.md  bootstrap_dev.ps1  build_desktop_target.ps1  cleanup_artifacts.ps1  desktop_build_target_paths.ps1  prep_offline_bundle.ps1  sanitize_reverse_build.py  vv_start.ps1  (+1 more)
product/: README.md
product/engine/: Cargo.toml  build.rs
product/engine/examples/: wp0029_smoke.rs  wp0131_localization_smoke.rs  wp0150_localization_run_smoke.rs
product/engine/native/: whisper_bridge.cpp
product/engine/resources/models/: manifest.json
product/engine/resources/models/bundled/demo/: demo.txt
product/engine/resources/tooling/: pinned_dependency_manifest.json
product/engine/src/: asr.rs  cmd.rs  config.rs  db.rs  diagnostics.rs  error.rs  ffmpeg.rs  image_batch.rs  instagram_subscriptions.rs  jobs.rs  lib.rs  library.rs  models.rs  paths.rs  persistence.rs  pinned_dependency_manifest.rs  speakers.rs  subscriptions.rs  subtitle_tracks.rs  subtitles.rs  tools.rs  translate.rs  vendor_patches.rs  voice_backend_adapters.rs  voice_backends.rs  voice_benchmarks.rs  voice_cast_packs.rs  voice_cleanup.rs  voice_library.rs  voice_plans.rs  voice_reference_candidates.rs  voice_reference_curation.rs  voice_templates.rs
product/engine/tests/: wp0027_smoke.rs
scratchpads/: scratchpad1.md
(+286 files in other folders)
