[package]
name = "voxvulgi_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
ffmpeg-sidecar = "2.4.0"
hex = "0.4.3"
hound = "3.5.1"
regex = "1.11.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
thiserror = "2.0.16"
ureq = "3.2.0"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
zip = "0.6.6"

[dev-dependencies]
filetime = "0.2.23"
tempfile = "3.20.0"

[build-dependencies]
cc = "1.2.37"
